--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/logo.webp" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Головна</title>
   </head>
@@ -16,7 +16,7 @@
         <div class="row">
           <div class="logo">
             <a href="index.html">
-              <img src="img/logo.png" alt="логотип" />
+              <img src="img/logo.webp" alt="логотип" />
             </a>
           </div>
           <ul>
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <div class="header" style="background-image: url(img/header.png)">
+    <div class="header" style="background-image: url(img/header.webp)">
       <div class="container">
         <div class="row">
           <div class="col-6 col-lg-12">
@@ -42,28 +42,13 @@
                 <h2>Каталог</h2>
                 <div class="doors">
                   <div class="door">
-                    <div
-                      class="name"
-                      style="background-image: url(img/door1.jpg)"
-                    >
-                      Глухі двері
-                    </div>
+                    <div class="name">Глухі двері</div>
                   </div>
                   <div class="door">
-                    <div
-                      class="name"
-                      style="background-image: url(img/door2.jpg)"
-                    >
-                      Двері зі склом
-                    </div>
+                    <div class="name">Двері зі склом</div>
                   </div>
                   <div class="door">
-                    <div
-                      class="name"
-                      style="background-image: url(img/door3.jpg)"
-                    >
-                      Великого формата
-                    </div>
+                    <div class="name">Великого формата</div>
                   </div>
                 </div>
                 <a class="btn" href="catalog.html">Переглянути</a>
@@ -74,7 +59,7 @@
                   <div class="door">
                     <div
                       class="name"
-                      style="background-image: url(img/door1.png)"
+                      style="background-image: url(img/door1.webp)"
                     >
                       Ворота
                     </div>
@@ -82,7 +67,7 @@
                   <div class="door">
                     <div
                       class="name"
-                      style="background-image: url(img/door2.png)"
+                      style="background-image: url(img/door2.webp)"
                     >
                       Забори
                     </div>
@@ -90,7 +75,7 @@
                   <div class="door">
                     <div
                       class="name"
-                      style="background-image: url(img/door3.png)"
+                      style="background-image: url(img/door3.webp)"
                     >
                       Роботи з дверима
                     </div>
@@ -104,49 +89,49 @@
       </div>
     </div>
     <!-- Популярні товари -->
-    <div class="popular" style="background-image: url(img/background.jpg)">
+    <div class="popular" style="background-image: url(img/background.webp)">
       <div class="container">
         <div class="row popular-title">
           <h2>Популярні товари</h2>
         </div>
         <div class="row popular-goods">
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.png" alt="Назва" />
+            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.png" alt="Назва" />
+            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.png" alt="Назва" />
+            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.png" alt="Назва" />
+            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.png" alt="Назва" />
+            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.png" alt="Назва" />
+            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.png" alt="Назва" />
+            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.png" alt="Назва" />
+            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
