--- a/index.html
+++ b/index.html
@@ -96,42 +96,74 @@
         </div>
         <div class="row popular-goods">
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
+            <img
+              src="img/сatalog/door_anglia.webp"
+              alt="Назва"
+              style="width: 200px; height: 250px"
+            />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
+            <img
+              src="img/сatalog/door_anglia.webp"
+              alt="Назва"
+              style="width: 200px; height: 250px"
+            />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
+            <img
+              src="img/сatalog/door_anglia.webp"
+              alt="Назва"
+              style="width: 200px; height: 250px"
+            />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
+            <img
+              src="img/сatalog/door_anglia.webp"
+              alt="Назва"
+              style="width: 200px; height: 250px"
+            />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
+            <img
+              src="img/сatalog/door_anglia.webp"
+              alt="Назва"
+              style="width: 200px; height: 250px"
+            />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
+            <img
+              src="img/сatalog/door_anglia.webp"
+              alt="Назва"
+              style="width: 200px; height: 250px"
+            />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
+            <img
+              src="img/сatalog/door_anglia.webp"
+              alt="Назва"
+              style="width: 200px; height: 250px"
+            />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
           <div class="col-3 col-lg-6 col-sm-12 product">
-            <img src="img/сatalog/door_anglia.webp" alt="Назва" />
+            <img
+              src="img/сatalog/door_anglia.webp"
+              alt="Назва"
+              style="width: 200px; height: 250px"
+            />
             <h3>Назва</h3>
             <div>14888 &#8372;</div>
           </div>
